docs: adjust the doc of endpoints to shelters, users and login using swagger
