# src/routes/shelterRouter.ts
@@ -7,7 +7,7 @@ const ShelterControle = new controller();
 
 router.get("/get-shelters", ShelterControle.getShelters);
 router.get("/get-shelters-by-city/:city", ShelterControle.getSheltersByCity);
-router.post("/create", ShelterControle.createShelter);
+router.post("/create-shelter", ShelterControle.createShelter);
 
 router.use(errorHandle);
 
