# src/routes/userRouter.ts
@@ -7,7 +7,7 @@ const UserController = new controller();
 
 router.get("/get-users", UserController.getUsers);
 router.get("/get-user", UserController.getUser);
-router.post("/create", UserController.createUser);
+router.post("/create-user", UserController.createUser);
 router.put("/edit-user", UserController.editUser);
 router.delete("/delete-user/:id", UserController.deleteUser);
 
